[gd_scene load_steps=4 format=3 uid="uid://dn30f6csb8dwc"]

[ext_resource type="Script" path="res://signal_manager.gd" id="1_wdrdv"]
[ext_resource type="Script" path="res://gui.gd" id="2_kjgf2"]
[ext_resource type="PackedScene" uid="uid://c8pbu6u2xofno" path="res://default_cave.tscn" id="3_0q4u0"]

[node name="Main" type="Node2D"]
script = ExtResource("1_wdrdv")

[node name="GUI" type="Node2D" parent="."]
script = ExtResource("2_kjgf2")

[node name="NoThreatsLabel" type="Label" parent="GUI"]
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = -315.0
theme_override_font_sizes/font_size = 32
text = "Hello threats!"

[node name="WumpusThreatLabel" type="Label" parent="GUI"]
offset_left = -640.0
offset_top = -320.0
offset_right = 640.0
offset_bottom = -275.0
theme_override_font_sizes/font_size = 32
text = "Hello threats!"

[node name="PitfallThreatLabel" type="Label" parent="GUI"]
offset_left = -640.0
offset_top = -275.0
offset_right = 640.0
offset_bottom = -230.0
theme_override_font_sizes/font_size = 32
text = "Hello threats!"

[node name="SinkholeThreatLabel" type="Label" parent="GUI"]
offset_left = -640.0
offset_top = -230.0
offset_right = 640.0
offset_bottom = -185.0
theme_override_font_sizes/font_size = 32
text = "Hello threats!"

[node name="RoomNumberLabel" type="Label" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = 272.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Room No: X"
vertical_alignment = 1

[node name="IllegalActionLabel" type="Label" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = 317.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Illegal Move"
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameManager" parent="." instance=ExtResource("3_0q4u0")]
